--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
 body {
-  background-color: black;
+  background-color: rgb(32, 32, 37);
 }
 
-.greetings {
+.menu {
+  display: inline-block;
+  background-color: #18181C;
+}
+
+.logo {
+  width: 100px;
+  display: block;
+  border-radius: 100px;
+  border: 2px solid #ffffffd3;
+}
+
+.name {
   color: white;
+  font-family: Arial;
+}
+
+button {
+  display: block;
+}
+
+.links {
+  font-family: Inter;
+  color: white;  
+}
+
+.info {
+  display: inline-block;
+  vertical-align: top;
 }
