--- a/style.css
+++ b/style.css
@@ -1,143 +1,89 @@
-/*
-align-items: center "This centers the child elements of the <div> vertically"
-justify-content: center: This centers the child elements of the <div> horizontally.
-*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
-body {
-    background: #202025;
-}
+/* * NAVBAR */
 
 .navbar {
+    background-color: #18181C;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-
-    position: absolute;
-    /*
-    width: 324px;
-    height: 399px;
-    */
-    left: 0px;
-    top: 0px;
-
-    background: #18181C;
+    width: 380px;
+    align-items: center;
 }
 
-.info {
+.discord-info {
+    margin-top: 26px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-
-    /*
-    width: 279px;
-    height: 121px;
-    */
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    gap: 14px;
+    justify-content: center;
 }
 
 .pfp {
-    width: 121px;
-    height: 121px;
     border-radius: 100%;
-
-    background: #C4C4C4;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    width: 150px;
+    height: 150px;
 }
 
 .user-info {
-    /* Auto layout */
-
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-
-    /*
-    width: 158px;
-    height: 114px;
-    */
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    gap: -10px;
+    justify-content: center;
 }
 
 .username {
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 60px;
-
-    color: #FFFFFF;
-
-    margin: auto;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    color: white;
+    font-size: 70px;
+    margin: 0px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
 }
 
 .usertag {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 34px;
-    line-height: 41px;
-
-    color: #E0E0E0;
-
+    color: rgb(214, 214, 214);
     margin: 0px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    font-size: 36px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 100;
 }
 
+/* * BUTTONS */
+
 .buttons {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 18px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    gap: 10px;
+    margin-bottom: 20px;
+    min-height: 100%;
+    height: auto;
 }
 
 .button {
-    color: #DFDFDF;
-    border: none;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
+    color: white;
+    background-color: #2E2E34;
+    font-family: 'Inter', sans-serif;
     font-size: 25px;
+    font-weight: 600;
+    width: 330px;
+    text-align: start;
+    border-radius: 10px;
+    border: none;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 22px;
+    padding-right: 15px;
+}
 
-    width: 324px;
-    height: 56px;
+.button.contact {
+    background-color: #248046;
+}
 
-    background: #2E2E34;
-    border-radius: 15px;
+.button.contact:hover {
+    background-color: #1f6e3c;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #25252b;
+    cursor: pointer;
 }
